fixed overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -361,10 +361,18 @@ h5 {
   .landing-left {
     display: flex;
     flex-direction: column;
-    width: fit-content;
+    width: 80%;
     height: fit-content;
     margin: 2rem;
+    overflow: hidden;
 
+    .title {
+      font-size: 2rem;
+    }
+
+    .name {
+      font-size: 1rem;
+    }
     .toggle-scroll {
       margin-top: 2rem;
     }
@@ -820,7 +828,7 @@ h5 {
 
   h1 {
     margin-left: 2rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 500;
     @include sm {
       margin-left: 6rem;
@@ -930,22 +938,21 @@ h5 {
 .education-card {
   display: flex;
   flex-direction: column;
-
   color: white;
+  border: 2px solid green;
 
   h2 {
     width: fit-content;
     max-width: 14ch;
     font-size: 1.5rem;
     font-weight: 500;
-    padding-right: 0rem;
     margin-bottom: 2rem;
     text-align: center;
     border-bottom: solid 2px map-get($color, redAccent);
   }
   ul > li {
     font-size: 1rem;
-    width: 35ch;
+    width: 250px;
     margin-bottom: 0.6rem;
 
     @include sm {
